--- a/src/LBF/MainBundle/Resources/views/Main/indexMain.html.twig
+++ b/src/LBF/MainBundle/Resources/views/Main/indexMain.html.twig
@@ -82,36 +82,11 @@
 					        <!-- Slides Container -->
 					        <div id="slider1_container_content" u="slides" style="cursor: move; position: absolute; right: 0px; top: 0px; width: 1200px; height: 400px; overflow: hidden;">
 					            
-								<div>
-									<img u=image src="{{ asset('img/presentation/1.jpg') }}" />
-								</div>
-					            <div>
-					                <img u=image src="{{ asset('img/presentation/2.jpg') }}" />
-					            </div>
-					            <div>
-					                <img u=image src="{{ asset('img/presentation/3.jpg') }}" />
-					            </div>
-					            <div>
-					                <img u=image src="{{ asset('img/presentation/4.jpg') }}" />
-					            </div>
-					            <div>
-					                <img u=image src="{{ asset('img/presentation/5.jpg') }}" />
-					            </div>
-					            <div>
-					                <img u=image src="{{ asset('img/presentation/6.jpg') }}" />
-					            </div>
-					            <div>
-					                <img u=image src="{{ asset('img/presentation/7.jpg') }}" />
-					            </div>
-					            <div>
-					                <img u=image src="{{ asset('img/presentation/8.jpg') }}" />
-					            </div>
-					            <div>
-					                <img u=image src="{{ asset('img/presentation/9.jpg') }}" />
-					            </div>
-					            <div>
-					                <img u=image src="{{ asset('img/presentation/10.jpg') }}" />
-					            </div>
+								{% for image in homePhotos %}
+									<div>
+										<img u=image src="{{ asset(image.webPath) }}" />
+									</div>
+								{% endfor %}
 					        </div>
 					    </div>
 
@@ -564,7 +539,7 @@
 																			<img src="{{ asset('img/system/defaults/new_ES.png') }}" alt="New" style="width:100%;"/>
 																		</div>
 																	{% endif %}
-																	{% if product.webPath|length > 0 %}
+																	{% if product.alt|length > 0 and product.url|length > 0 %}
 																		<div class="product_img" style="width: 100%; background-image: url('{{ asset(product.webPath) }}'); background-size: cover; background-position: 50%;">
 																			<!-- onClick="showPhoto('{{ product.id }}')" -->
 																		</div>
@@ -918,7 +893,7 @@
 
 																			<br/>
 																			{% set image_url_recipe = asset('img/system/defaults/default_recipe.jpg') %}
-																			{% if recipe.webPath|length > 0 %}
+																			{% if recipe.alt|length > 0 and recipe.url|length > 0 %}
 																				{% set image_url_recipe = asset(recipe.webPath) %}
 																			{% endif %}
 																			<div class="center">
@@ -1060,7 +1035,7 @@
 																				                	{{ recipe.updatedAt|date('H:i') }}
 																				                </span>
 																				              </div>
-																				              <div id="recipeModalContent_PhotoRecipe" class="recipe_img_lg" style="width: 100%; background-size: cover; background-position: 50%; background-image: url({{ image_url_recipe }})">
+																				              <div class="recipe_img_lg" style="width: 100%; background-size: cover; background-position: 50%; background-image: url({{ image_url_recipe }})">
 																				                <script type="text/javascript">
 																				                  var recipe_height_lg = $('.recipe_img_lg').width() * 0.8;
 																				                  $('.recipe_img_lg').css({'height':recipe_height_lg+'px'});
@@ -1083,7 +1058,7 @@
 																		</div>
 																		<div class="col-lg-3 col-md-3 col-sm-3 col-xs-3">
 																			<div class="recipe_img_div">
-																			{% if recipe.webPath|length > 0 %}
+																			{% if recipe.alt|length > 0 and recipe.url|length > 0 %}
 																				<div class="recipe_img" style="width: 100%; background-image: url('{{ asset(recipe.webPath) }}'); background-size: cover; background-position: 50%;">
 																					<!-- onClick="showPhoto('{{ recipe.id }}')" -->
 																				</div>
@@ -1157,51 +1132,79 @@
 					<br/>
 					<div class="row bio">
 						<div class="row90 hidden-xs">
-							<div class="col-lg-4 col-md-4 col-sm-4 sep_dotted_right">
-								<img src="{{ asset('img/creators/aude.jpg') }}" alt="Aude" class="creator_img"/>
-								<h4>Aude de Penfentenyo </h4>
-								{{ 'aboutUs.descriptions.aude' | trans }}
-							</div>
-							<div class="col-lg-4 col-md-4 col-sm-4 sep_dotted_right">
-								<img src="{{ asset('img/creators/antoine.jpg') }}" alt="Antoine" class="creator_img"/>
-								<h4>Antoine de Penfentenyo </h4>
-								{{ 'aboutUs.descriptions.antoine' | trans }}
-							</div>
-							<div class="col-lg-4 col-md-4 col-sm-4">
-								<img src="{{ asset('img/creators/pierre-arnaud.jpg') }}" alt="Pierre-Arnaud" class="creator_img"/>
-								<h4>Pierre-Arnaud Destremau</h4>
-								{{ 'aboutUs.descriptions.pierreArnaud' | trans }}
-							</div>
+							{% set index_creator = 1 %}
+							{% set length_creators = creators|length %}
+							{% for creator in creators %}
+								<div class="col-lg-4 col-md-4 col-sm-4 {% if index_creator % 3 != 0 %}sep_dotted_right{% endif %}">
+									{% set image_url_creator = asset('img/system/defaults/default_profile.png') %}
+									{% if creator.alt|length > 0 and creator.url|length > 0 %}
+										{% set image_url_creator = asset(creator.webPath) %}
+									{% endif %}
+									<img src="{{ image_url_creator }}" alt="{{ creator.name }}" class="creator_img"/>
+									<h4>
+										{{ creator.name }}
+									</h4>
+									{% set descriptionForCreator = '' %}
+									{% if current_language %}
+										{% if current_language == 'fr' and creator.descriptionFr|length > 0 %}
+											{% set descriptionForCreator = creator.descriptionFr %}
+										{% elseif current_language == 'en' and creator.descriptionEn|length > 0 %}
+											{% set descriptionForCreator = creator.descriptionEn %}
+										{% else %}
+											{% set descriptionForCreator = creator.descriptionEs %}
+										{% endif %}
+									{% else %}
+											{% set descriptionForCreator = creator.descriptionEs %}
+									{% endif %}
+									
+									{{ descriptionForCreator }}
+								</div>
+								{% if index_creator % 3 == 0 and index_creator < length_creators %}
+									<div class="col-lg-12 col-md-12 col-sm-12 sep_dotted_bottom">
+										<br/>
+									</div>
+									<div class="col-lg-12 col-md-12 col-sm-12">
+										<br/>
+									</div>
+								{% endif %}
+								{% set index_creator = index_creator + 1 %}
+							{% endfor %}
 						</div>
 
 						<div class="row bio hidden-lg hidden-md hidden-sm ">
-							<div class="col-xs-12 creator_padding sep_dotted_bottom">
-								<div class="col-xs-4">
-									<img src="{{ asset('img/creators/aude.jpg') }}" alt="Aude" class="creator_img_xs"/>
+							{% set index_creator = 1 %}
+							{% set length_creators = creators|length %}
+							{% for creator in creators %}
+								<div class="col-xs-12 creator_padding {% if index_creator < length_creators %}sep_dotted_bottom{% endif %}">
+									<div class="col-xs-4">
+										{% set image_url_creator = asset('img/system/defaults/default_profile.png') %}
+										{% if creator.alt|length > 0 and creator.url|length > 0 %}
+											{% set image_url_creator = asset(creator.webPath) %}
+										{% endif %}
+										<img src="{{ image_url_creator }}" alt="{{ creator.name }}" class="creator_img"/>
+									</div>
+									<div class="col-xs-8">
+										<h4>
+											{{ creator.name }}
+										</h4>
+										{% set descriptionForCreator = '' %}
+										{% if current_language %}
+											{% if current_language == 'fr' and creator.descriptionFr|length > 0 %}
+												{% set descriptionForCreator = creator.descriptionFr %}
+											{% elseif current_language == 'en' and creator.descriptionEn|length > 0 %}
+												{% set descriptionForCreator = creator.descriptionEn %}
+											{% else %}
+												{% set descriptionForCreator = creator.descriptionEs %}
+											{% endif %}
+										{% else %}
+												{% set descriptionForCreator = creator.descriptionEs %}
+										{% endif %}
+										
+										{{ descriptionForCreator }}
+									</div>
 								</div>
-								<div class="col-xs-8">
-									<h4>Aude de Penfentenyo </h4>
-									{{ 'aboutUs.descriptions.aude' | trans }}
-								</div>
-							</div>
-							<div class="col-xs-12 creator_padding sep_dotted_bottom">
-								<div class="col-xs-4">
-									<img src="{{ asset('img/creators/antoine.jpg') }}" alt="Antoine" class="creator_img_xs"/>
-								</div>
-								<div class="col-xs-8">
-									<h4>Antoine de Penfentenyo </h4>
-									{{ 'aboutUs.descriptions.antoine' | trans }}
-								</div>
-							</div>
-							<div class="col-xs-12 creator_padding">
-								<div class="col-xs-4">
-									<img src="{{ asset('img/creators/pierre-arnaud.jpg') }}" alt="Pierre-Arnaud" class="creator_img_xs"/>
-								</div>
-								<div class="col-xs-8">
-									<h4>Pierre-Arnaud Destremau</h4>
-									{{ 'aboutUs.descriptions.pierreArnaud' | trans }}
-								</div>
-							</div>
+								{% set index_creator = index_creator + 1 %}
+							{% endfor %}
 						</div>
 					</div>
 				</div>
