--- a/web/css/main_style.css
+++ b/web/css/main_style.css
@@ -1423,9 +1423,8 @@ body.modal-open {
 }
 
 .recipe_img, .recipe_img_lg {
-	border-radius: 0%;
+	border-radius: 0;
 	border: 1px solid rgba(41,41,41,0.5);
-	width: 100%;
 	margin-bottom: 10px;
 	margin-top: 5px;
 }
@@ -1738,6 +1737,43 @@ body.modal-open {
 
 .news_on_page_img {
 	width: 100%;
+	opacity: 1;
+}
+
+.arrow_page {
+	margin-left: 5px;
+}
+.arrow_page img {
+	width: 20px;
+	opacity: 0;
+}
+.list_pages_admin {
+	margin: 0;
+	margin-left: 10px;
+	padding: 0;
+}
+.list_pages_admin li {
+	color: rgba(12,28,57,1) !important;
+	margin-top: 5px;
+	margin-bottom: 8px;
+	padding: 3px;
+	border-bottom: 1px solid transparent;
+}
+.list_pages_admin li:hover {
+	border-bottom: 1px solid rgba(22,54,110,0.2);
+	/*background-color: rgba(22,54,110,0.1);*/
+}
+.list_pages_admin li:hover .arrow_page img {
+	opacity: 0.5;
+}
+.li_pages_active {
+	border-bottom: 1px solid rgba(22,54,110,0.5) !important;
+	/*background-color: rgba(22,54,110,0.1);*/
+}
+.li_pages_active a {
+	font-weight: 900 !important;
+}
+.li_pages_active .arrow_page img {
 	opacity: 1;
 }
 
@@ -2166,6 +2202,23 @@ body.modal-open {
 	width: 15px;
 }
 
+.thumbnail_page {
+	padding: 20px;
+}
+
+.coverPhoto_img_admin {
+	border-radius: 0;
+	border: 1px solid rgba(41,41,41,0.5);
+	width: 600px;
+	margin: 0;
+}
+
+.page_img_admin {
+	border-radius: 0;
+	width: 150px;
+	height: 150px;
+	margin: 0;
+}
 
 
 /* ------------------------------------------------------ Footer ------------------------------------------------------ */
